--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     </header>
         <main class="content">
             <div class="container container--left">
-                <article class="fishList">
+                <article class="fish-list">
                     
                 </article>
+             
                 <article class="quotes">
                     <section class="quote">
                         <div class="quote__text">"'Tis no man.  'Tis a remorseless eating machine."</div>
